--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,4 +2,7 @@
 name = "uv-tools"
 version = "0.1.0"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "prettytable>=3.15.1",
+    "tiktoken>=0.9.0",
+]
